Validando os dados e a leitura do excel da sandoz

--- a/ExcelReadWrite.csproj
+++ b/ExcelReadWrite.csproj
@@ -5,4 +5,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ClosedXML" Version="0.95.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Write" />
+    </ItemGroup>
+
 </Project>
