--- a/ExcelReadWrite.csproj
+++ b/ExcelReadWrite.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.0.0" />
       <PackageReference Include="ClosedXML" Version="0.95.3" />
     </ItemGroup>
 
